# Fredo

./: .gitignore  README.md  phishingEmail.txt
Fredo/: Cargo.toml  keyLogging.txt
Fredo/src/: encode.rs  main.rs  server.rs  system.rs
attacker/: attacker.py
keys/: private_key.pem
server/: encode.py  fileOps.py  malwares.txt  public_key.pem  server.py
server/malware/: id_110114557826662011022763644699653497166.txt  id_156016673631021385469560526897240924494.txt  id_159465669971191420273174033977299493198.txt  id_170657771381675710226569193415475257678.txt  id_258063836783897718399634543905879155022.txt
server/malware/198919002832734861602600469063485153614/: about.txt
server/malware/206361303447638782725023523780055327054/: about.txt
server/malware/236250744943530990201377832751684444494/: about.txt
server/malware/247079324568232706237235910417973043534/: about.txt
server/malware/329978889709792438830162461276423119182/: about.txt  commands.txt
server/malware/58295426938911481233463771508805263694/: about.txt  logs.txt
