[package]
name = "Fredo"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = {version = "1.0.219", features =["derive"]}
ureq = {version = "3.0.11", features = ["json"]}
tokio = { version = "1", features = ["full"] }
reqwest = {version = "0.11", features = ["blocking"]}
async-trait = "0.1.88"
chrono = "0.4.41"
