[package]
name = "Fredo"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = {version = "1.0.219", features =["derive"]}
serde_json = "1.0.140"
tokio = { version = "1", features = ["full"] }
reqwest = {version = "0.11", features = ["blocking", "json"]}
async-trait = "0.1.88"
chrono = "0.4.41"
windows = {version = "0.61.1", features =["Win32_System_SystemInformation", "Win32_UI_WindowsAndMessaging","Win32_UI_Input_KeyboardAndMouse" ]}
base64 = "0.22.1"
once_cell = "1.21.3"
rand = { version = "0.9.1", features=["std_rng"]}
